test/tests/stages/18_structures/valid/no_structure_parameters/parse_and_lex/trailing_comma.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: s
        Bool: 0
        List[2]: 
          CMemberDeclaration: 
            TIdentifier: a
            Int: 
          CMemberDeclaration: 
            TIdentifier: b
            Int: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: x
                  CCompoundInit: 
                    List[2]: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 1
                          None: 
                        None: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 2
                          None: 
                        None: 
                    None: 
                  Structure: 
                    TIdentifier: s
                    Bool: 0
                  None: 
            CS: 
              CIf: 
                CBinary: 
                  COr: 
                  CBinary: 
                    CNotEqual: 
                    CDot: 
                      TIdentifier: a
                      CVar: 
                        TIdentifier: x
                        None: 
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    None: 
                  CBinary: 
                    CNotEqual: 
                    CDot: 
                      TIdentifier: b
                      CVar: 
                        TIdentifier: x
                        None: 
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 2
                      None: 
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 1
                            None: 
                None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
